--- a/package.json
+++ b/package.json
@@ -1,16 +1,35 @@
 {
-  "name": "gitter",
+  "name": "@kingbit101/gitter",
   "version": "1.0.0",
-  "description": "",
+  "description": "Interactive CLI tool for writing better Git commit messages",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "module",
   "bin": {
     "gitter": "./index.js"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "git",
+    "commit",
+    "cli",
+    "conventional-commits",
+    "commit-message",
+    "developer-tools",
+    "productivity"
+  ],
+  "author": "Zack Agba",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/king101-bit/gitter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/king101-bit/gitter/issues"
+  },
+  "homepage": "https://github.com/king101-bit/gitter#readme",
+   "engines": {
+    "node": ">=14.0.0"
   }
 }
